tests/cpp/internal/negative_case/bad_consteval_local_variable.cpp
// Negative test: consteval cannot be applied to a local variable declaration.

int main() {
  consteval int x = 42;
  return x;
}
